# Project_Code_2D

./: .gitignore  CMakeLists.txt  README.md  dmbuild.sh  run.sh
Python_output/: phase_mesh_1_4_b.json  program_handle.py  program_handle_Main.py
Python_output/matlab_eval/: diff_data2.m  diffusion_data.m  equilibrium_concentrations.m  gamma_and_m.m  grain_boundary_diffusion.m  interpolation_function.m  isccw.m  mean_biax_stress.m  mean_vm_stress.m  plot_biax.m  plot_diffusion.asv  plot_diffusion.m  plot_diffusion2.asv  plot_diffusion2.m  plot_diffusion_old.m  plot_geometry.m  plot_imc_kinetics_volume.m  plot_imc_volume.m  plot_level_set.asv  plot_level_set.m  plot_stress.asv  plot_stress.m  plot_times.m
Python_output/matlab_eval/mat_eval_files/: IMC_volume.mat  IMC_volume_MC1.mat  IMC_volume_MC2.mat  IMC_volume_alpha.mat  IMC_volume_alpha1d4.mat  IMC_volume_alpha2d4.mat  IMC_volume_alpha5d4.mat  biax_stressMC1.mat  biax_stressMC2.mat  exey.mat  level_set_IMCvol_2D4.mat
Python_output/matlab_eval/other/: attainable_performance.m  brown_radius.m  eval_imc_radius.m  eval_matgp.m  eval_mean_stress.m  eval_times.m  rmlines2.m  rmlines3.asv  rmlines3.m  test_rm_lines.m
Python_output/phase_mesh_script/: convert_mat_to_json.py  diffusion_mesh.py  diffusion_mesh_Main.py  extract_grain_data.py  extract_grain_data_Main.py  grain_mesh_global.py  grain_mesh_global_Main.py  grain_mesh_local.py  grain_mesh_local_Main.py  grain_mesh_triangular.py  grain_mesh_triangular_Main.py  level_set_init.json  triangle_mesh.py  triangle_mesh_Main.py  triangle_mesh_example.py  untitled0.py
Python_output/phase_mesh_script/backup/: triangle_mesh_example.py
Python_output/single_study/: python_input.json  python_mesh.json
Python_output/single_study/VTK/: main_1.vtk  main_2.vtk  main_3.vtk  main_4.vtk  mesh_with_gpmat_1.vtk  mesh_with_gpmat_2.vtk  mesh_with_gpmat_3.vtk  mesh_with_gpmat_4.vtk
Python_output/single_study/mat_files/: diffusion_1_1.mat  diffusion_1_2.mat  diffusion_1_3.mat  diffusion_1_4.mat  diffusion_1_5.mat  diffusion_2_1.mat  diffusion_2_2.mat  diffusion_2_3.mat  diffusion_2_4.mat  diffusion_2_5.mat  diffusion_3_1.mat  diffusion_3_2.mat  diffusion_3_3.mat  diffusion_3_4.mat  diffusion_3_5.mat  diffusion_4_1.mat  diffusion_4_2.mat  diffusion_4_3.mat  diffusion_4_4.mat  diffusion_4_5.mat  execution_data.mat  level_set_1.mat  level_set_2.mat  level_set_3.mat  level_set_4.mat  level_set_5.mat  level_setinit.mat  stress_1.mat  stress_2.mat  stress_3.mat  stress_4.mat  stress_5.mat
Python_output/single_study/phase_meshes/: phase_mesh_1_1.json  phase_mesh_1_2.json  phase_mesh_1_3.json  phase_mesh_1_4.json  phase_mesh_1_5.json  phase_mesh_2_1.json  phase_mesh_2_2.json  phase_mesh_2_3.json  phase_mesh_2_4.json  phase_mesh_2_5.json  phase_mesh_3_1.json  phase_mesh_3_2.json  phase_mesh_3_3.json  phase_mesh_3_4.json  phase_mesh_3_5.json  phase_mesh_4_1.json  phase_mesh_4_2.json  phase_mesh_4_3.json  phase_mesh_4_4.json  phase_mesh_4_5.json
other/: temp
other/gfort_lintermods_1/gfort_ejlib_lintermods/: ej_fem_util.mod
other/gfort_lintermods_1/gfort_mflib_lintermods/: mf_datatypes.mod  mf_utils.mod
other/gfort_lintermods_1/gfort_somelib_lintermods/: abaqus_util.mod  elem_large_cont_2d.mod  f95_precision.mod  fem_system.mod  fem_util.mod  mater_hyperel.mod  mater_j2iso.mod  mater_large.mod  mater_magnjav.mod  mater_magnkho.mod  mater_magnlin.mod  mater_magnnonl1.mod  matlab_util.mod  matrix_util.mod  memory_util.mod  readind_util.mod  (+3 more)
other/info/: info.txt~  info_program.txt  info_program.txt~  info_vscode.txt
other/json-fortran-8.3.0/: CMakeLists.txt  run.sh
other/tasks/: configure.sh  make.sh  run.sh
other/templintermods/: abaqus_util.mod  diffusion.mod  diffusion_phases.mod  diffusion_types.mod  elem_flow_2d.mod  elem_large_cont_2d.mod  elem_large_cont_3d.mod  elem_magn_2d.mod  elem_small_cont_2d.mod  f95_precision.mod  fem_system.mod  fem_util.mod  front_solver.mod  gp_util.mod  grain_module.mod  imc_transf.mod  interface_reconstruction_routines.mod  jf_test_10_mod.mod  jf_test_11_mod.mod  jf_test_12_mod.mod  jf_test_13_mod.mod  jf_test_14_mod.mod  jf_test_15_mod.mod  jf_test_16_mod.mod  jf_test_17_mod.mod  jf_test_18_mod.mod  jf_test_19_mod.mod  jf_test_1_mod.mod  jf_test_20_mod.mod  jf_test_21_mod.mod  jf_test_22_mod.mod  jf_test_23_mod.mod  jf_test_24_mod.mod  jf_test_25_mod.mod  jf_test_26_mod.mod  jf_test_27_mod.mod  jf_test_28_mod.mod  jf_test_29_mod.mod  jf_test_2_mod.mod  jf_test_30_mod.mod  (+80 more)
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/somelib_ifort/: CMakeLists.txt  CMakeLists.txt~  Makefile  abaqus_util.f90  abaqus_util.i90  domain_intrf.f90  domain_intrf.i90  elem_flow_2d.i90  elem_intrf.f90  elem_intrf.i90  elem_large_cont_2d.f90  elem_large_cont_2d.i90  elem_large_cont_3d.f90  elem_large_cont_3d.i90  elem_magn_2d.i90  elem_small_cont_2d.f90  elem_small_cont_2d.i90  fem_system.f90  fem_system.i90  fem_util.f90  fem_util.i90  front_solver.f90  front_solver.i90  mater_J2iso.f90  mater_J2iso.f90~  mater_J2iso.i90  mater_J2iso_Cu.f90  mater_J2iso_Cu.i90  mater_J2iso_Sn.f90  mater_J2iso_Sn.i90  mater_hyperel.f90  mater_hyperel.i90  mater_large.f90  mater_large.i90  mater_magn.i90  mater_magnjav.f90  mater_magnjav.f90_save_v2  mater_magnjav.f90_saved  mater_magnjav.f90_v20210317  mater_magnjav.i90  (+27 more)
src/main/: CMakeLists.txt  main.f90  main.i90
src/modules/: CMakeLists.txt
src/modules/whiskermodules/: CMakeLists.txt  diffusion.f90  diffusion.i90  diffusion_types.f90  diffusion_types.i90  gp_util.f90  gp_util.i90  grain_module.f90  grain_module.i90  imc_transf.f90  imc_transf.i90  json_read.f90  json_read.i90  level_set.f90  level_set.i90  ls_reconstruction_routines.f90  ls_reconstruction_routines.i90  ls_sorting_routines.f90  ls_sorting_routines.i90  ls_types.f90  ls_types.i90  ls_update_routines.f90  ls_update_routines.i90  ls_utils.f90  ls_utils.i90  ls_vp_routines.f90  ls_vp_routines.i90  mater_hyperel_IMC.f90  mater_hyperel_IMC.i90  mesh_module.f90  mesh_module.i90  mfc_util.f90  mfc_util.i90  output_data.f90  output_data.i90  rhapsloop.f90  rhapsloop.i90
(+189 files in other folders)
